# edu-platform

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: .env.template  main.py
src/alembic/: env.py
src/alembic/versions/: 2dcd71a086ad_user_alter_table.py  be2c9638461d_initial_migration.py
src/articles/: dal.py  model.py
src/common/: __init__.py
src/common/articles/: dal.py  schemas.py
src/common/articles/api/: __init__.py  dependencies.py  handlers.py
src/common/articles/models/: __init__.py  dal.py  model.py
src/common/users/: dal.py  schemas.py
src/common/users/api/: __init__.py  dependencies.py  handlers.py
src/common/users/models/: __init__.py  enum.py  model.py
src/core/: config.py
src/core/dal/: base.py
src/core/database/: manager.py  model.py
src/users/: dal.py  model.py
src/users/api/: handlers.py
