[tool.poetry]
name = "educational platform"
version = "0.1.0"
description = ""
authors = ["iogannR"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.0"}
sqlalchemy = {extras = ["asycnio"], version = "^2.0.35"}
alembic = "^1.13.2"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
